<resources>
    <string name="app_name">My Notes</string>
    <string name="search_your_note">Search your note</string>
    <string name="new_note">New Note</string>
    <string name="note_description">Note description</string>
    <string name="note_title">Note title</string>
    <string name="no_notes_found">No notes found</string>
    <string name="no_notes_found_click_the_add_button_to_create_a_note">No notes found, click the add button to create a note.</string>
    <string name="edit_note">Edit Note</string>
    <string name="go_back">Go Back</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="exit_new_note">Do you want to exit without saving?</string>
    <string name="confirm_exit">Confirm exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_title_notice">Please enter the note title</string>
    <string name="note_saved">Note saved!</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
</resources>