<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColorPrimary"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_note_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/round_30"
            android:backgroundTint="@color/bgColorSecondary"
            android:drawableStart="@drawable/search_icon_in_edittext"
            android:drawablePadding="10dp"
            android:drawableTint="@color/textColorSecondary"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:hint="@string/search_your_note"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:textColorHint="@color/textColorSecondary"
            android:textSize="16sp"
            android:foregroundGravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_heading" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/new_note"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_notes_found_click_the_add_button_to_create_a_note"
            android:fontFamily="@font/poppins"
            android:textColor="@color/textColorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="34dp"
            android:textSize="16sp"
            android:visibility="gone"
            android:gravity="center"/>
        
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/edit_note_search"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>